--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # LocalStack Configuration
 LOCALSTACK_ENDPOINT=http://localhost:4566
-AWS_REGION=us-east-1
+AWS_REGION=eu-west-1
 AWS_ACCESS_KEY_ID=test
 AWS_SECRET_ACCESS_KEY=test
 
